--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>安眠彩洞遊戲</title>
+  <title>唐仔遊戲</title>
   <style>
     body {
       font-family: "Helvetica Neue", sans-serif;
@@ -95,7 +95,7 @@
     let intervalId;
     let spawnSpeed = 1000;
     let activeGirls = [];
-    const girlImgSrc = 'yl.png';
+    const girlImgSrc = 'yl2.png';
 
     for (let i = 0; i < 9; i++) {
       const hole = document.createElement('div');
