--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       if (timeLeft <= 0) {
         clearInterval(intervalId);
         clearTimeout(spawnTimeout);
-        alert('遊戲結束！您的得分：' + score);
+        alert('遊戲結束！唐唐得分：' + score);
       }
     }
 
